style.css
body {
    font-family: 'Roboto', sans-serif, 'Oxygen';
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}




.main-header {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    margin-bottom: 40px;
    align-items: center;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 10px;
    font-weight: 300px;
    margin: 0px;
    padding: 0px;
    color: grey;
}

.hero {
    padding: 30px 100px;
    padding-top: 0;
}

.hero-section {
    display: flex;
    margin: 60px;
    gap: 50px;

}

.hero img {
    width: 500px;
    height: 200px;
}



.information {
    text-align: center;
}

.information img {
    width: 120px;
    height: 120px;
    display: flex;
    margin: auto;
}


.info-section {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    padding-bottom: 100px;
}



.section {
    max-width: 150px;

}

.cta-section {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 80px;
}

.cta {
    padding: 30px 100px;
    display: flex;
    gap: 100px;
    justify-content: center;
    align-items: center;

}

.hero,
.footer {
    background: #1F2937;
}

.main-text {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}

.hero-section .text,
.main-header .text {
    font-size: 18px;
    color: #E5E7EB;
}

.logo-text {
    font-size: 24px;
    color: #F9FAF8;
}

button,
.cta {
    background-color: #3882F6;
    color: #E5E7EB;
}

.hero-section button {
    border: 1px solid #3882F6;
    border-radius: 8px;
}

.cta button {
    border: 1px solid #E5E7EB;
    border-radius: 8px;
}

button {
    padding: 8px 16px;
    font-weight: 600;
}

.information-header {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
    padding: 30px
}

.section .text {
    color: grey;
}

.testimonial {
    background-color: #E5E7EB;
    padding: 60px 200px
}

.footer {
    color: #E5E7EB;
    margin-top: auto;
    padding: 25px;
    align-items: center;
    justify-content: center;
    display: flex;
}

.quote-text {
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;
    align-content: center;
    justify-content: center;
}

.quote-author {
    font-weight: 900;
    display: flex;
    justify-content: flex-end;
    align-content: center;
}

.information img,
.cta {
    border: 2px solid #3882F6;
    border-radius: 8px;
}

